--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "version": "1.0.1",
   "author": "David Johnson",
   "dependencies": {
-    "gatsby": "^2.0.19",
+    "gatsby": "^2.0.31",
+    "gatsby-image": "^2.0.17",
     "gatsby-plugin-google-analytics": "^2.0.6",
-    "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-manifest": "^2.0.6",
     "gatsby-plugin-netlify": "^2.0.2",
-    "gatsby-plugin-offline": "^2.0.5",
+    "gatsby-plugin-offline": "^2.0.9",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.0.8",
     "gatsby-plugin-styled-components": "^3.0.0",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "gatsby-source-filesystem": "^2.0.5",
+    "gatsby-transformer-sharp": "^2.1.5",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
     "react-lazyload": "^2.3.0",
     "styled-components": "^4.0.2"
